<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/learn"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/aprende" />
        <item
            android:id="@+id/exercise"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ejercicio" />
        <item
            android:id="@+id/diet"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/dietas" />
        <item
            android:id="@+id/alarms"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/alarma" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/config" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
